<resources>
    <string name="app_name">Santaclaus</string>

    <!-- Login -->
    <string name="login_title">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_ok_button">Login</string>
    <string name="login_signup_button">SignUp</string>

    <!-- SignUp -->
    <string name="signup_title">Sign Up</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_name">Name</string>
    <string name="signup_birthday">Birthday</string>
    <string name="signup_address">Address</string>
    <string name="signup_avatar">Address</string>
    <string name="signup_ok_button">SignUp</string>
    <string name="signup_upload_msg">Upload Success!</string>

    <!-- Message -->
    <string name="message_title">Message</string>
    <string name="message_message_label">Message</string>
    <string name="message_message_list_label">Message List</string>
    <string name="message_send_button">Send</string>
    <string name="message_save_msg">Create Message Success!</string>

</resources>
